--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
-    "http-server": "^14.1.0",
+    "@turf/turf": "^6.5.0",
+    "beefy": "^2.1.8",
+    "browserify": "^17.0.0",
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb": "^19.0.4",
     "huffmodel": "file:../huffmodel",
     "leaflet": "^1.7.1"
   },
-  "devDependencies": {
-    "eslint": "^8.6.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "nodemon": "^2.0.15"
+  "scripts": {
+    "start": "beefy app.js:bundle.js --live",
+    "bundle": "browserify app.js -o bundle.js"
   },
   "eslintConfig": {
     "extends": "airbnb",
