--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.4",
     "huffmodel": "file:../huffmodel",
+    "is-url": "^1.2.4",
     "leaflet": "^1.7.1"
   },
   "scripts": {
