--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "browserify": "^17.0.0",
     "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.4",
-    "huffmodel": "^0.0.1",
+    "huffmodel": "file:../huffmodel",
     "is-url": "^1.2.4",
     "leaflet": "^1.7.1"
   },
   "scripts": {
     "start": "beefy app.js:bundle.js $PORT",
+    "dev": "beefy app.js:bundle.js --live",
     "bundle": "browserify app.js -o bundle.js"
   },
   "eslintConfig": {
