--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "browserify": "^17.0.0",
     "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.4",
-    "huffmodel": "file:../huffmodel",
+    "huffmodel": "^0.0.2",
     "is-url": "^1.2.4",
     "leaflet": "^1.7.1"
   },
