Allow non-camelcase variables

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "rules": {
       "arrow-body-style": "off",
       "arrow-parens": "off",
+      "camelcase": "off",
       "comma-dangle": "off",
       "func-names": "off",
       "no-console": "off",
