Disable the no-loop-func rule
I don't mind the rule, but it's a bit nit-picky

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
       "comma-dangle": "off",
       "func-names": "off",
       "no-console": "off",
+      "no-loop-func": "off",
       "no-plusplus": "off",
       "no-multiple-empty-lines": "off",
       "no-multi-spaces": "off",
